--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,29 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: #eee;
-    color: #111;
+  background: #eee;
+  color: #111;
 }
 
 .playerBlock {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 10px;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+  justify-content: space-between;
 }
 .playerBlock .card {
-    width: 24%;
-    margin-bottom: 10px;
+  width: 24%;
+  margin-bottom: 10px;
 }
 
 img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  margin: 10px 0;
 }
